--- a/AuthInMern-Authentication-In-MERN/client/src/components/Signup/styles.module.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/Signup/styles.module.css
@@ -1,7 +1,9 @@
 .signup_container {
 	width: 100%;
 	min-height: 100vh;
-	background-color: #f5f5f5;
+	/* background-color: #f5f5f5; */
+	background-image: url(./Login.jpg);
+	background-size: cover;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -96,3 +98,9 @@
 	color: white;
 	margin: 10px;
 }
+
+/* .homebutton {
+	margin-top: -150px;
+
+	margin-bottom: 20px;
+} */
