--- a/AuthInMern-Authentication-In-MERN/client/src/components/common/heading/header.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/common/heading/header.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 .head{
     padding: 20px 0;
     color: #fff;
@@ -28,8 +34,9 @@ header li {
 }
 
 header ul li a {
-    color: #fff;
+    color: black;
     font-weight: 500;
+    font-size: x-large;
     transition: 0.5s;
 }
 
