--- a/AuthInMern-Authentication-In-MERN/client/src/components/team/team.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/team/team.css
@@ -58,3 +58,35 @@
 .container.grid {
     margin-left: 20%;
 }
+
+/* .back {
+  background-image: url("/AuthInMern-Authentication-In-MERN/client/public/images/back.webp");
+} */
+.back2{
+  
+    background-image: url("./smiling-colleagues-office-talking.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100vh;
+    padding-top: 20%;
+    padding-right: 50px;
+    color: black;
+    text-align: center;
+       
+
+}
+
+.back2 h1 {
+  font-size: 100px;
+  font-weight: 400;
+}
+
+
+.marigin2 {
+  margin-top: 40.3%;
+} 
