--- a/AuthInMern-Authentication-In-MERN/client/src/components/common/heading/header.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/common/heading/header.css
@@ -1,114 +1,113 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-.head{
-    padding: 20px 0;
-    color: #fff;
+.head {
+  padding: 20px 0;
+  color: #fff;
 }
 
-.logo h1{
-    font-size: 35px;
-    font-weight: 900;
+.logo h1 {
+  font-size: 35px;
+  font-weight: 900;
 }
 
 .head .icon {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 /*------------header--------------*/
 header {
-    background-color: rgba(255,255,255,0.2); 
-    margin: 0 30px;
-    position: relative;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 30px;
+  position: relative;
 }
 
 header ul {
-    padding: 30px 20px;
+  padding: 30px 20px;
 }
 
 header li {
-    margin-right: 40px;
+  margin-right: 40px;
 }
 
 header ul li a {
-    color: black;
-    font-weight: 500;
-    font-size: x-large;
-    transition: 0.5s;
+  color: black;
+  font-weight: 500;
+  font-size: x-large;
+  transition: 0.5s;
 }
 
 header ul li a:hover {
-    color: #1eb2a6;
+  color: #1eb2a6;
 }
 
 .start {
-    background-color: #1eb2a6;
-    padding: 30px 70px;
-    color: #fff;
-    clip-path: polygon(10% 0, 100% 0, 100% 100%, 0 100%);
+  background-color: #1eb2a6;
+  padding: 30px 70px;
+  color: #fff;
+  clip-path: polygon(10% 0, 100% 0, 100% 100%, 0 100%);
 }
 
 .toggle {
-    display: none;
+  display: none;
 }
 
 @media screen and (max-width: 768px) {
-    .start{
-        clip-path: none;
-    }
-    header {
-        margin: 0;
-        background-color: #1eb2a6;
-        position: relative;
-    }
+  .start {
+    clip-path: none;
+  }
+  header {
+    margin: 0;
+    background-color: #1eb2a6;
+    position: relative;
+  }
 
-    header ul.flexSB{
-        display: none;
-    }
+  header ul.flexSB {
+    display: none;
+  }
 
-    header ul li {
-        margin-bottom: 20px;
-    } 
+  header ul li {
+    margin-bottom: 20px;
+  }
 
-    .toggle {
-        display: block;
-        background-color: #1eb2a6;
-        color: #fff;
-        font-size: 30px;
-        position:absolute;
-        right: 50px;
-        top: -20px;
-    }
+  .toggle {
+    display: block;
+    background-color: #1eb2a6;
+    color: #fff;
+    font-size: 30px;
+    position: absolute;
+    right: 50px;
+    top: -20px;
+  }
 
-    .mobile-nav {
-        position: absolute;
-        top: 10vh;
-        left: 0;
-        width: 100%;
-        background-color: #1eb2a6;
-    }
-
+  .mobile-nav {
+    position: absolute;
+    top: 10vh;
+    left: 0;
+    width: 100%;
+    background-color: #1eb2a6;
+  }
 }
 
 .buttons {
-    /* padding: 10px 0; */
-    /* padding-bottom: 10px; */
-    margin-top: -20px;
-    margin-right: 20px;
-    position: absolute;
-    display: flex;
-    right: 0;
-    justify-content: flex-end;
+  /* padding: 10px 0; */
+  /* padding-bottom: 10px; */
+  margin-top: -20px;
+  margin-right: 20px;
+  position: absolute;
+  display: flex;
+  right: 0;
+  justify-content: flex-end;
 }
 
 .imagelogo {
-    background-image: url("spectrum.png");
-    background-repeat: no-repeat;
-    height: 80px;
-    width: 240px;
-    background-position: center;
-    margin-left: -80px;
+  background-image: url("spectrum.png");
+  background-repeat: no-repeat;
+  height: 80px;
+  width: 240px;
+  background-position: center;
+  margin-left: -80px;
 }
