--- a/AuthInMern-Authentication-In-MERN/client/src/components/Signup/styles.module.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/Signup/styles.module.css
@@ -105,10 +105,10 @@
 	margin-bottom: 20px;
 } */
 
-.password-toggle-icon {
+/* .password-toggle-icon {
   position: absolute;
   top: 8 px;
   right: 10 px;
   z-index: 1000;
   cursor: pointer;
-}
+} */
