--- a/AuthInMern-Authentication-In-MERN/client/src/components/common/heading/header.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/common/heading/header.css
@@ -113,8 +113,6 @@ header ul li a:hover {
 }
 
 /* 
- */
-
 body {
   background: #212129;
 }
@@ -262,10 +260,9 @@ body {
   left: 0px;
   top: 10px;
 }
-/*  search*/
-.search {
-  padding: 19px 0;
-}
+ .search {
+  padding: 19px 0; */
+/* }
 .search .logo img {
   width: auto;
   height: auto;
@@ -274,10 +271,11 @@ body {
   width: 190%;
   border: 0px solid rgba(0, 0, 0, 0.1);
   /*padding: 10px;*/
-  border-radius: 50px;
+/* border-radius: 50px;
   background: #ffffffd7;
-}
-.search-box i {
+ }  */
+
+/* .search-box i {
   width: 5%;
   text-align: center;
   font-size: 20px;
@@ -287,8 +285,8 @@ body {
 }
 .search-box input {
   width: 50%;
-  padding: 2px;
-  /* background-color: #ffffff00; */
+  padding: 2px; */
+/* background-color: #ffffff00; 
 }
 ::placeholder {
   font-size: 15px;
@@ -301,8 +299,8 @@ body {
 }
 .icons {
   position: relative;
-}
-.search .icons span {
+} */
+/* .search .icons span {
   position: absolute;
   top: 0px;
   right: 0px;
@@ -317,18 +315,20 @@ body {
 .search .f_flex {
   justify-content: end;
 }
+ */
+
 /*  */
 /*  */
 /*  */
-body {
+/* body {
   padding: 0;
   margin: 0;
   height: 100vh;
   width: 100%;
   background: #051b33;
-}
+}*/
 
-form {
+/* form {
   position: relative;
   top: 50%;
   left: 50%;
@@ -341,9 +341,9 @@ form {
   border-radius: 25px;
   border: 4px solid white;
   padding: 5px;
-}
+} */
 
-input {
+/* input {
   position: absolute;
   top: 0;
   left: 0;
@@ -385,4 +385,4 @@ form:hover input {
 form:hover .fa {
   background: #07051a;
   color: white;
-}
+} */
