--- a/AuthInMern-Authentication-In-MERN/client/src/components/stores/stores.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/stores/stores.css
@@ -1,7 +1,8 @@
 .stores{
     background-color: white;
     background-size: auto;
-
+    display: grid;
+    grid-template-columns: 0fr 0fr 0fr 0fr;
 }
 
 .card_container {
@@ -10,9 +11,9 @@
     overflow: hidden;
     box-shadow: 0px 0px 25px -5px;
     transition: 0.5s;
-    animation: ease-in;margin-bottom: 40px;
-    display: grid;
-    grid-template-columns: 4fr;
+    animation: ease-in;
+    margin-bottom: 40px;
+    margin-top: 30px;
 }
 
 .card_container:hover {
