--- a/AuthInMern-Authentication-In-MERN/client/src/components/form/form.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/form/form.css
@@ -1,4 +1,3 @@
-
 *,
 *::before,
 *::after {
@@ -36,7 +35,59 @@ button {
 fieldset {
   border: none;
 }
+/* comment this out and try */
+/* .storeName {
+  display: block;
+  border: none;
+  font-size: 0.9rem;
+  padding: 12px;
+}
+.storeName:not([type="radio"]) {
+  width: 100%;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25);
+  background: rgba(238, 238, 239, 0.5);
+  border-radius: 5px;
+}
 
+.storeName:not([type="radio"]):focus {
+  outline: none;
+  box-shadow: 0 0 0 3px #1877f2;
+}
+.email {
+  display: block;
+  border: none;
+  font-size: 0.9rem;
+  padding: 12px;
+}
+.email:not([type="radio"]) {
+  width: 100%;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25);
+  background: rgba(238, 238, 239, 0.5);
+  border-radius: 5px;
+}
+
+.email:not([type="radio"]):focus {
+  outline: none;
+  box-shadow: 0 0 0 3px #1877f2;
+}
+.logoimage {
+  display: block;
+  border: none;
+  font-size: 0.9rem;
+  padding: 12px;
+}
+.logoimage:not([type="radio"]) {
+  width: 100%;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25);
+  background: rgba(238, 238, 239, 0.5);
+  border-radius: 5px;
+}
+
+.logoimage:not([type="radio"]):focus {
+  outline: none;
+  box-shadow: 0 0 0 3px #1877f2;
+} */
+/* comment the nesxt three input type css */
 input {
   display: block;
   border: none;
