--- a/AuthInMern-Authentication-In-MERN/client/src/components/form/form.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/form/form.css
@@ -232,3 +232,25 @@ fieldset:invalid ~ fieldset {
   margin-left: auto;
   margin-right: auto;
 }
+/*  */
+
+.error_msg {
+  width: 370px;
+  padding: 15px;
+  margin: 5px 0;
+  font-size: 14px;
+  background-color: #f34646;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+}
+.success_msg {
+  width: 370px;
+  padding: 15px;
+  margin: 5px 0;
+  font-size: 14px;
+  background-color: #3bb19b;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+}
