--- a/AuthInMern-Authentication-In-MERN/client/src/components/EmailVerify/styles.module.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/EmailVerify/styles.module.css
@@ -12,6 +12,7 @@
 	outline: none;
 	padding: 12px 0;
 	background-color: #3bb19b;
+	color: white;
 	border-radius: 20px;
 	width: 180px;
 	font-weight: bold;
