--- a/AuthInMern-Authentication-In-MERN/client/src/components/Login/styles.module.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/Login/styles.module.css
@@ -42,7 +42,10 @@
 
 .input {
 	outline: none;
-	border: none;
+	/* border: none;*/
+	  border-width: 0.005cm;
+  border-color: #1eb2a6;
+  box-shadow: 2px #1eb2a6; 
 	width: 370px;
 	padding: 15px;
 	border-radius: 10px;
