--- a/AuthInMern-Authentication-In-MERN/client/src/components/footer/footer.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/footer/footer.css
@@ -5,7 +5,7 @@ footer {
 footer .container {
   display: grid;
   grid-template-columns: 4fr 3fr 3fr;
-  
+  padding-bottom: 50px;
 }
 @media screen and (max-width: 768px) {
   footer .container {
