--- a/AuthInMern-Authentication-In-MERN/client/src/components/form/form.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/form/form.css
@@ -10,15 +10,12 @@
 
 html {
   font-family: Helvetica, Arial, sans-serif;
-  color: #1c1e21;
+  color: black;
 }
-body {
+/* body {
   background: #f0f2f5;
-}
-img {
-  display: block;
-  max-width: 100%;
-}
+} */
+
 
 a {
   color: rgb(56, 88, 152);
@@ -37,14 +34,14 @@ fieldset {
   border: none;
 }
 
-input {
+ input {
   display: block;
-  border: none;
+  /* border: none; */
   font-size: 0.9rem;
   padding: 12px;
 }
-
-input:not([type="radio"]) {
+/* 
+ input:not([type="radio"]) {
   width: 100%;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25);
   background: rgba(238, 238, 239, 0.5);
@@ -54,15 +51,13 @@ input:not([type="radio"]) {
 input:not([type="radio"]):focus {
   outline: none;
   box-shadow: 0 0 0 3px #1877f2;
-}
+}  */
 
 fieldset:invalid ~ fieldset {
   display: none;
 }
 
-.logo {
-  height: 69px;
-}
+
 
 .main-heading {
   text-align: center;
@@ -90,9 +85,8 @@ fieldset:invalid ~ fieldset {
   padding: 1em 1.5em;
 }
 
-.form:invalid button[type="submit"] {
-  /* user-select: none; */
-  opacity: 0.3;
+.form:invalid button[type="submit"] { 
+   opacity: 0.3;
   pointer-events: none;
 }
 
@@ -123,9 +117,8 @@ fieldset:invalid ~ fieldset {
 }
 
 .fluid-row {
-  display: grid;
-  /* grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); */
-  grid-auto-columns: minmax(0, 1fr);
+  display: grid; 
+   grid-auto-columns: minmax(0, 1fr);
   grid-auto-flow: column;
   gap: 1em;
 }
@@ -151,8 +144,6 @@ fieldset:invalid ~ fieldset {
   line-height: 0;
 }
 
-.radio-group > input {
-}
 
 .button {
   font-size: 1.125rem;
@@ -165,19 +156,21 @@ fieldset:invalid ~ fieldset {
 }
 
 .button-primary {
-  color: white;
-  background: rgb(0, 164, 0);
-}
-
-.terms {
-  font-size: 11px;
-  opacity: 0.75;
-}
-.terms > * + * {
-  margin-top: 1em;
+  color: black;
+  background: #1eb2a6;
 }
 
 .button-container > * {
   margin-left: auto;
   margin-right: auto;
+} 
+.fb{
+  margin-bottom: 300px;
+  margin-top: 60px;
+  padding-bottom: 60px;
+  padding-top: 60px;
+  padding-left: 40px;
+  box-shadow: 2px 2px 2px 2px #1eb2a6;
+  
+  border-radius: 1cm;
 }
