--- a/AuthInMern-Authentication-In-MERN/client/src/components/form/form.css
+++ b/AuthInMern-Authentication-In-MERN/client/src/components/form/form.css
@@ -11,9 +11,6 @@ html {
   font-family: Helvetica, Arial, sans-serif;
   color: black;
 }
-/* body {
-  background: #f0f2f5;
-} */
 
 
 a {
@@ -40,12 +37,12 @@ input {
   padding: 12px;
 }
 
-input:not([type="radio"]) {
+/* input:not([type="radio"]) {
   width: 100%;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25);
   background: rgba(238, 238, 239, 0.5);
   border-radius: 5px;
-}
+} */
 
 .email:not([type="radio"]):focus {
   outline: none;
