--- a/Fiver/client/src/components/catCard/CatCard.scss
+++ b/Fiver/client/src/components/catCard/CatCard.scss
@@ -1,36 +1,37 @@
 .CartCategories {
     display: flex;
+}
+.catCard {
+  flex: 3;
+  height: 350px;
+  color: black;
+  border-radius: 5px;
+  position: relative;
+  cursor: pointer;
+  margin: 20px;
+
+  img {
+    width: 100%;
+    // height: 100%;
+    object-fit: cover;
   }
-  .catCard {
-    flex: 3;
-    // width: 250px;
-    height: 350px;
-    color: white;
-    border-radius: 5px;
+  
+  .desc {
+    font-weight: 300;
     position: relative;
-    cursor: pointer;
-    margin: 20px;
-  
-    img {
-      width: 100%;
-      // height: 100%;
-      object-fit: cover;
-    }
-  
-    .desc {
-      font-weight: 300;
-      position: absolute;
-      top: 15px;
-      left: 15px;
-    }
-  
-    .title {
-      position: absolute;
-      top: 40px;
-      left: 15px;
-      font-size:24px;
-      font-weight: 500;
-    }
     
+    top: 15px;
+    left: 15px;
   }
+
+  .title {
+    position: relative;
+    top: 40px;
+    left: 60px;
+    font-size:24px;
+    font-weight: 500;
+  }
+    
+}
+
   
