--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #013914;
+    background-color: #957FCA;
+    // background-color: #6639A8;
+    // background-color: #39B6B5;
+    // background-color: #E5BBEB;
     color: white;
     position: sticky;
     top: 0;
@@ -10,8 +13,8 @@
     transition: 0.5s all ease;
   
     &.active {
-      background-color: white;
-      color: black;
+      background-color: #957FCA;
+      color: white;
   
       button {
         background-color: white !important;
