--- a/Fiver/client/src/pages/home/Home.scss
+++ b/Fiver/client/src/pages/home/Home.scss
@@ -6,7 +6,8 @@
       padding: 100px 0px;
   
       &.dark {
-        background-color: #0d084d;
+        // background-color: #0d084d;
+        background-color: #957FCA;
   
         h1 {
           color: white !important;
@@ -28,7 +29,8 @@
         }
   
         button {
-          background-color: #1dbf73;
+          // background-color: #1dbf73;
+          background-color: #39B6B5;
           border: none;
           color: white;
           padding: 10px 20px;
