--- a/Fiver/client/src/pages/myGigs/MyGigs.scss
+++ b/Fiver/client/src/pages/myGigs/MyGigs.scss
@@ -6,6 +6,7 @@
     .container {
       width: 1400px;
       padding: 50px 0px;
+      padding-bottom: 150px;
   
       .title {
         display: flex;
