--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -113,8 +113,8 @@
       padding: 10px 0px;
       display: flex;
       justify-content: space-between;
-      color: gray;
-      font-weight: 300;
+      color: white ;
+      font-weight: 500;
       font-family: "Montserrat", sans-serif;
     }
   }
