--- a/Fiver/client/src/components/footer/Footer.scss
+++ b/Fiver/client/src/components/footer/Footer.scss
@@ -10,7 +10,7 @@
     }
   
     .container {
-      width: 1400px;
+      width: 1600px;
       .top {
         display: flex;
         justify-content: space-between;
@@ -65,6 +65,16 @@
             align-items: center;
             gap: 10px;
           }
+          
+        button {
+          color: white;
+          padding: 10px 20px;
+          border-radius: 5px;
+          border: 1px solid white;
+          cursor: pointer;
+          background-color: #39B6B5;
+          border-color: #39B6B5;
+        }
         }
       }
     }
