--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -94,8 +94,8 @@
           cursor: pointer;
   
           &:hover {
-            background-color: #1dbf73;
-            border-color: #1dbf73;
+            background-color: #39B6B5;
+            border-color: #39B6B5;
           }
         }
       }
