--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -75,13 +75,13 @@
             background-color: white;
             border-radius: 10px;
             z-index: 999;
-            border: 1px solid lightgrey;
+            border: 1px solid rgb(151, 151, 151);
             display: flex;
             flex-direction: column;
             gap: 10px;
             width: 200px;
             font-weight: 300;
-            color: gray;
+            color: rgb(0, 0, 0);
           }
         }
   
@@ -116,6 +116,7 @@
       color: white ;
       font-weight: 500;
       font-family: "Montserrat", sans-serif;
+    
     }
   }
   
