--- a/Fiver/client/src/pages/gigs/Gigs.scss
+++ b/Fiver/client/src/pages/gigs/Gigs.scss
@@ -34,13 +34,14 @@
         .left {
           display: flex;
           align-items: center;
-          gap: 10px;
-          color: #555;
-          font-weight: 300;
+          gap: 30px;
+          color: #010101;
+          font-weight: 600;
+          font-size: 23px;
   
           input{
             padding: 5px;
-            border: 1px solid lightgrey;
+            border: 1px solid rgb(57, 57, 57);
             border-radius: 5px;
             outline: none;
   
@@ -50,11 +51,11 @@
           }
   
           button{
-            padding: 5px 10px;
+            padding: 8px 25px;
             background-color: #1dbf73;
             color: white;
             border: none;
-            font-weight: 500;
+            font-weight: 700;
             border-radius: 5px;
             cursor: pointer;
           }
