--- a/Fiver/client/src/components/catCard/CatCard.scss
+++ b/Fiver/client/src/components/catCard/CatCard.scss
@@ -1,37 +1,74 @@
-.CartCategories {
-    display: flex;
-}
-.catCard {
-  flex: 3;
-  height: 350px;
-  color: black;
-  border-radius: 5px;
-  position: relative;
-  cursor: pointer;
-  margin: 20px;
+// .CartCategories {
+//     display: flex;
+// }
+// .catCard {
+//   flex-direction: row;
+//   // flex: 3;
+//   height: 350px;
+//   color: black;
+//   border-radius: 5px;
+//   border-color: black;
+//   position: relative;
+//   cursor: pointer;
+//   margin: 20px;
 
-  img {
-    width: 100%;
-    // height: 100%;
-    object-fit: cover;
-  }
+//   img {
+//     width: 100%;
+//     // height: 100%;
+//     // object-fit: cover;
+//   }
   
-  .desc {
-    font-weight: 300;
-    position: relative;
+//   .desc {
+//     font-weight: 300;
+//     position: relative;
     
-    top: 15px;
-    left: 15px;
-  }
+//     top: 15px;
+//     left: 15px;
+//   }
 
+//   .title {
+//     position: relative;
+//     top: 40px;
+//     left: 60px;
+//     font-size:24px;
+//     font-weight: 500;
+//   }
+    
+// }
+
+.CartCategories {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.catCard {
+  flex: 0 1 calc(25% - 20px); /* Adjust the width as per your design */
+  border: 1px solid #000;
+  padding: 10px;
+  margin-bottom: 20px;
+  text-align: center;
+  height: 300px;
+  width: 250px;
+  margin: 30px;
   .title {
+    font-weight: bold;
     position: relative;
-    top: 40px;
-    left: 60px;
+    top: 20px;
+    // left: 60px;
+    text-align: center;
     font-size:24px;
     font-weight: 500;
+    text-decoration: none;
   }
-    
 }
 
-  
+.catCard img {
+  max-width: 100%;
+  height: auto;
+}
+
+// title:visited {
+//   color: #000; /* Set the desired color for visited links */
+//   text-decoration: none;
+// }
