--- a/Fiver/client/src/components/featured/Featured.scss
+++ b/Fiver/client/src/components/featured/Featured.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     // background-color: #013914;
-   background-image: url("./img/Login.jpg");
+   background-image: url("./img/back.jpg");
    background-size: cover;
     // color: white;
   
