--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #957FCA;
-    // background-color: #6639A8;
+    // background-color: #957FCA;
+    background-color: #6639A8;
     // background-color: #39B6B5;
     // background-color: #E5BBEB;
     color: white;
@@ -13,13 +13,13 @@
     transition: 0.5s all ease;
   
     &.active {
-      background-color: #957FCA;
+      background-color: #6639A8;
       color: white;
   
       button {
         background-color: white !important;
-        color: #1dbf73 !important;
-        border: 1px solid #1dbf73 !important;
+        color: #39B6B5 !important;
+        border: 1px solid #39B6B5 !important;
       }
     }
   
@@ -39,7 +39,7 @@
   
         .dot {
           font-weight: bold;
-          color: #1dbf73;
+          color: #39B6B5;
         }
       }
       .links {
@@ -72,10 +72,10 @@
             top: 50px;
             right: 0;
             padding: 20px;
-            background-color: white;
+            background-color: #957FCA;
             border-radius: 10px;
             z-index: 999;
-            border: 1px solid lightgrey;
+            border: 1px solid #957FCA;
             display: flex;
             flex-direction: column;
             gap: 10px;
