--- a/Fiver/client/src/pages/login/Login.scss
+++ b/Fiver/client/src/pages/login/Login.scss
@@ -2,9 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    background-image: url(../../../public/img/Login.jpg);
+    background-size: cover;
     form {
         width: 360px;
+        height: 500px;
         padding: 100px 0px;
         display: flex;
         flex-direction: column;
@@ -32,7 +34,7 @@
             color: white;
             font-weight: 500;
             font-size: 18px;
-            background-color: #1dbf73;
+            background-color: #39B6B5;
             cursor: pointer;
         }
 
