--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #957FCA;
-    // background-color: #6639A8;
+    // background-color: #957FCA;
+    background-color: #6639A8;
     // background-color: #39B6B5;
     // background-color: #E5BBEB;
     color: white;
@@ -13,7 +13,7 @@
     transition: 0.5s all ease;
   
     &.active {
-      background-color: #957FCA;
+      background-color: #6639A8;
       color: white;
   
       button {
