--- a/Fiver/client/src/pages/gigs/Gigs.scss
+++ b/Fiver/client/src/pages/gigs/Gigs.scss
@@ -52,7 +52,7 @@
   
           button{
             padding: 8px 25px;
-            background-color: #1dbf73;
+            background-color: #39B6B5;
             color: white;
             border: none;
             font-weight: 700;
