--- a/Fiver/client/src/pages/login/Login.scss
+++ b/Fiver/client/src/pages/login/Login.scss
@@ -4,17 +4,29 @@
     justify-content: center;
     background-image: url(../../../public/img/Login.jpg);
     background-size: cover;
-    form {
-        width: 360px;
+
+    .contain {
+        width: 500px;
         height: 500px;
         padding: 100px 0px;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
 
+        gap: 20px;
+        background-color: transparent;
+        form {
+            width: 400px;
+            height: 500px;
+            text-align: center;
+            background-color: white;
+            opacity: 1;
+            margin-left: 75px;
+            margin-bottom: 30px;
+            display: flex;
+            flex-direction: column;
+        }
         h1 {
             color: gray;
             margin-bottom: 20px;
+            opacity: 1;
         }
 
         label {
@@ -24,8 +36,12 @@
 
         input,
         textarea {
+            width: 200px;
+            justify-content: center;
+            margin-left: 75px;
             padding: 20px;
             border: 1px solid rgb(216, 214, 214);
+            opacity: 100;
         }
 
         button {
@@ -44,3 +60,4 @@
         }
     }
 }
+
