--- a/Fiver/client/src/pages/register/Register.scss
+++ b/Fiver/client/src/pages/register/Register.scss
@@ -10,7 +10,7 @@
         gap: 120px;
 
         h1 {
-            color: gray;
+            color: black;
             margin-bottom: 20px;
         }
 
@@ -23,7 +23,7 @@
             justify-content: space-between;
 
             label {
-                color: gray;
+                color: black;
                 font-size: 18px;
             }
 
@@ -39,7 +39,7 @@
                 color: white;
                 font-weight: 500;
                 font-size: 18px;
-                background-color: #1dbf73;
+                background-color: #39B6B5;
                 cursor: pointer;
             }
 
