--- a/Fiver/client/src/pages/login/Login.scss
+++ b/Fiver/client/src/pages/login/Login.scss
@@ -5,28 +5,17 @@
     background-image: url(../../../public/img/Login.jpg);
     background-size: cover;
 
-    .contain {
-        width: 500px;
-        height: 500px;
+    form {
+        width: 360px;
+        height: 400px;
         padding: 100px 0px;
-
+        display: flex;
+        flex-direction: column;
         gap: 20px;
-        background-color: transparent;
-        form {
-            width: 400px;
-            height: 500px;
-            text-align: center;
-            background-color: white;
-            opacity: 1;
-            margin-left: 75px;
-            margin-bottom: 30px;
-            display: flex;
-            flex-direction: column;
-        }
+
         h1 {
             color: gray;
             margin-bottom: 20px;
-            opacity: 1;
         }
 
         label {
@@ -36,12 +25,8 @@
 
         input,
         textarea {
-            width: 200px;
-            justify-content: center;
-            margin-left: 75px;
             padding: 20px;
             border: 1px solid rgb(216, 214, 214);
-            opacity: 100;
         }
 
         button {
@@ -61,3 +46,91 @@
     }
 }
 
+.login_container {
+    width: 100%;
+    min-height: 100vh;
+    /* background-color: red; */
+    background-image: url(./Login.jpg);
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 700px;
+    // height: 300px;
+    display: flex;
+    border-radius: 10px;
+    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
+        0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+}
+
+.form_container {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.form_container h1 {
+    font-size: 40px;
+    margin-top: 0;
+}
+
+.input {
+    outline: none;
+    /* border: none;*/
+    border-width: 0.005cm;
+    border-color: #1eb2a6;
+    box-shadow: 2px #1eb2a6;
+    width: 370px;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #edf5f3;
+    margin: 5px 0;
+    font-size: 14px;
+}
+
+// .error_msg {
+// 	width: 370px;
+// 	padding: 15px;
+// 	margin: 5px 0;
+// 	font-size: 14px;
+// 	background-color: #f34646;
+// 	color: white;
+// 	border-radius: 5px;
+// 	text-align: center;
+// }
+
+// .right {
+// 	flex: 1;
+// 	display: flex;
+// 	flex-direction: column;
+// 	align-items: center;
+// 	justify-content: center;
+// 	background-color: #3bb19b;
+// 	border-top-right-radius: 10px;
+// 	border-bottom-right-radius: 10px;
+// }
+
+.right h1 {
+    margin-top: 0;
+    color: white;
+    font-size: 40px;
+    align-self: center;
+}
+
+.white_btn,
+.green_btn {
+    border: none;
+    outline: none;
+    padding: 12px 0;
+    background-color: white;
+    border-radius: 20px;
+    width: 180px;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+}
