--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -72,7 +72,7 @@
             top: 50px;
             right: 0;
             padding: 20px;
-            background-color: #957FCA;
+            background-color: white;
             border-radius: 10px;
             z-index: 999;
             border: 1px solid #957FCA;
