--- a/Fiver/client/src/components/footer/Footer.scss
+++ b/Fiver/client/src/components/footer/Footer.scss
@@ -1,9 +1,10 @@
 .footer {
     display: flex;
     justify-content: center;
-    color: #666;
-    margin: 50px 0px;
-  
+    color: white;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #957FCA;
     img {
       width: 24px;
       height: 24px;
