--- a/Fiver/client/src/pages/add/Add.scss
+++ b/Fiver/client/src/pages/add/Add.scss
@@ -9,7 +9,7 @@
       h1 {
         width: max-content;
         margin-bottom: 30px;
-        color: gray;
+        color: black;
         font-weight: 300;
       }
   
@@ -19,7 +19,7 @@
         gap: 100px;
   
         label {
-          color: gray;
+          color: black;
           font-size: 18px;
         }
   
@@ -52,10 +52,18 @@
             color: white;
             font-weight: 500;
             font-size: 18px;
-            background-color: #1dbf73;
+            background-color: #39B6B5;
             cursor: pointer;
           }
-  
+          // input .imgbutt {
+          //   border: none;
+          //   padding: 20px;
+          //   color: white;
+          //   font-weight: 500;
+          //   font-size: 18px;
+          //   background-color: #39B6B5;
+          //   cursor: pointer;
+          // }
           .add {
             display: flex;
             justify-content: space-between;
