--- a/Fiver/client/src/pages/gig/Gig.scss
+++ b/Fiver/client/src/pages/gig/Gig.scss
@@ -74,7 +74,8 @@
         p {
           font-weight: 300;
           line-height: 25px;
-          color: #555;
+          color: black;
+          font-weight: 400;
         }
   
         .seller {
@@ -187,7 +188,7 @@
         }
   
         p{
-          color: gray;
+          color: black;
           margin: 10px 0px;
         }
   
@@ -214,7 +215,7 @@
             align-items: center;
             gap: 10px;
             font-weight: 300;
-            color: gray;
+            color: black;
             margin-bottom: 5px;
   
             img{
