--- a/Fiver/client/src/pages/message/Message.scss
+++ b/Fiver/client/src/pages/message/Message.scss
@@ -1,13 +1,23 @@
 .message {
     display: flex;
     justify-content: center;
+    background-color: #957FCA;
     .container {
       width: 1200px;
       margin: 50px;
+      background-color:rgb(227, 224, 224);
+      // background-color: #d5c6f9;
+      border-radius: 1cm;
       .breadcrumbs {
         font-weight: 300;
-        font-size: 13px;
-        color: #555;
+        font-size: 25px;
+        color: white;
+        margin-left: 20px;
+        padding-top: 20px;
+      }
+      .breadcrumbs:visited{
+        text-decoration: none;
+        color: white;
       }
       .messages {
         margin: 30px 0px;
@@ -17,7 +27,7 @@
         gap: 20px;
         height: 500px;
         overflow: scroll;
-  
+        background-color: lightgray;
         .item {
           display: flex;
           gap: 20px;
@@ -67,21 +77,26 @@
   
         textarea {
           width: 80%;
-          height: 100px;
+          height: 50px;
           padding: 10px;
+          margin-left: 50px;
+          margin-bottom: 30px;
           border: 1px solid lightgray;
           border-radius: 10px;
         }
   
         button{
-          background-color: #1dbf73;
-          padding: 20px;
+          background-color: #39B6B5;
+          padding: 10px  ;
           color: white;
           font-weight: 500;
           border: none;
           border-radius: 10px;
           cursor: pointer;
           width: 100px;
+          margin-right: 50px;
+          margin-left: 20px;
+          margin-bottom: 30px;
         }
       }
     }
