--- a/Fiver/client/src/pages/messages/Messages.scss
+++ b/Fiver/client/src/pages/messages/Messages.scss
@@ -5,7 +5,7 @@
     .container {
       width: 1400px;
       padding: 50px 0px;
-  
+      margin-bottom: 500px;
       .title {
         display: flex;
         justify-content: space-between;
