--- a/Fiver/client/src/pages/orders/Orders.scss
+++ b/Fiver/client/src/pages/orders/Orders.scss
@@ -6,7 +6,7 @@
     .container {
       width: 1400px;
       padding: 50px 0px;
-  
+      margin-bottom: 400px;
       .title {
         display: flex;
         justify-content: space-between;
