--- a/Fiver/client/src/pages/cart/cart.scss
+++ b/Fiver/client/src/pages/cart/cart.scss
@@ -23,28 +23,33 @@
 
     table {
       width: 100%;
-
+  
       tr {
         height: 50px;
+  
         th {
           text-align: left;
         }
+  
         td {
+  
           sup {
             font-size: 12px;
           }
-
+  
           .image {
             width: 50px;
             height: 25px;
             object-fit: cover;
           }
-
-          .message {
-            width: 25px;
+  
+          .delete {
+            width: 20px;
             cursor: pointer;
           }
+  
         }
+  
         &:nth-child(even) {
           background-color: #1dbf730f;
         }
