--- a/Fiver/client/src/pages/login/Login.scss
+++ b/Fiver/client/src/pages/login/Login.scss
@@ -149,3 +149,9 @@
     font-size: 14px;
     cursor: pointer;
 }
+// .error {
+//     color: red;
+//     font-size: 16px;
+//     margin-top: 10px;
+//     font
+// }
