--- a/Fiver/client/src/components/footer/Footer.scss
+++ b/Fiver/client/src/components/footer/Footer.scss
@@ -4,12 +4,12 @@
     color: white;
     padding-top: 50px;
     padding-bottom: 50px;
-    background-color: #957FCA;
+    background-color: #093d59;
     img {
       width: 24px;
       height: 24px;
     }
-  
+   
     .container {
       width: 1400px;
       .top {
