--- a/Fiver/client/src/components/reviews/Reviews.scss
+++ b/Fiver/client/src/components/reviews/Reviews.scss
@@ -28,7 +28,7 @@
         border: none;
         padding: 10px;
         color: white;
-        background-color: #39B6B5;
+        background-color: #093d59;
         cursor: pointer;
       }
     }
