--- a/Fiver/client/src/pages/add/Add.scss
+++ b/Fiver/client/src/pages/add/Add.scss
@@ -52,7 +52,7 @@
             color: white;
             font-weight: 500;
             font-size: 18px;
-            background-color: #39B6B5;
+            background-color: #093d59;
             cursor: pointer;
           }
           // input .imgbutt {
