--- a/Fiver/client/src/pages/gigs/Gigs.scss
+++ b/Fiver/client/src/pages/gigs/Gigs.scss
@@ -48,7 +48,7 @@
   
           button{
             padding: 8px 25px;
-            background-color: #39B6B5;
+            background-color: #093d59;
             color: white;
             border: none;
             font-weight: 700;
