--- a/Fiver/client/src/pages/home/Home.scss
+++ b/Fiver/client/src/pages/home/Home.scss
@@ -1,13 +1,13 @@
 .home {
     .features {
-      background-color: #f1fdf7;
+      background-color: #9ad5f632;
       display: flex;
       justify-content: center;
       padding: 100px 0px;
   
       &.dark {
         // background-color: #0d084d;
-        background-color: #957FCA;
+        background-color: #095d8ad7;
   
         h1 {
           color: white !important;
@@ -30,7 +30,7 @@
   
         button {
           // background-color: #1dbf73;
-          background-color: #39B6B5;
+          background-color: #095d8ad7;
           border: none;
           color: white;
           padding: 10px 20px;
