--- a/Fiver/client/src/components/catCard/CatCard.scss
+++ b/Fiver/client/src/components/catCard/CatCard.scss
@@ -1,46 +1,9 @@
-// .CartCategories {
-//     display: flex;
-// }
-// .catCard {
-//   flex-direction: row;
-//   // flex: 3;
-//   height: 350px;
-//   color: black;
-//   border-radius: 5px;
-//   border-color: black;
-//   position: relative;
-//   cursor: pointer;
-//   margin: 20px;
-
-//   img {
-//     width: 100%;
-//     // height: 100%;
-//     // object-fit: cover;
-//   }
-  
-//   .desc {
-//     font-weight: 300;
-//     position: relative;
-    
-//     top: 15px;
-//     left: 15px;
-//   }
-
-//   .title {
-//     position: relative;
-//     top: 40px;
-//     left: 60px;
-//     font-size:24px;
-//     font-weight: 500;
-//   }
-    
-// }
 
 .CartCategories {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  background-color: #f1fdf7;
+  background-color: #9ad5f632;
 }
 
 .catCard {
