--- a/Fiver/client/src/components/featured/Featured.scss
+++ b/Fiver/client/src/components/featured/Featured.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     // background-color: #013914;
-   background-image: url("./img/back.jpg");
+   background-image: url("./img/bg2.jpg");
    background-size: cover;
     // color: white;
   
@@ -58,8 +58,7 @@
             width: 120px;
             height: 50px;
             border: none;
-            // background-color: #1dbf73;
-            background-color: #39B6B5;
+            background-color: #093d59;
             color: white;
             align-self: flex-end;
             cursor: pointer;
