--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -2,10 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // background-color: #957FCA;
-    background-color: #6639A8;
-    // background-color: #39B6B5;
-    // background-color: #E5BBEB;
+    background-color: #093d59;
     color: white;
     position: sticky;
     top: 0;
@@ -13,13 +10,10 @@
     transition: 0.5s all ease;
   
     &.active {
-      background-color: #6639A8;
+      background-color: #093d59;
       color: white;
   
       button {
-        // background-color: white !important;
-        // color: #39B6B5 !important;
-        // border: 1px solid #39B6B5 !important;
         margin-top: -15px;
       }
     }
@@ -35,9 +29,7 @@
         font-size: 34px;
         font-weight: bold;
   
-        .text {
-        }
-  
+        
         .dot {
           font-weight: bold;
           color: #39B6B5;
