--- a/Fiver/client/src/pages/login/Login.scss
+++ b/Fiver/client/src/pages/login/Login.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(../../../public/img/Login.jpg);
+    background-image: url(../../../public/img/loginbg.png);
     background-size: cover;
     form {
         width: 360px;
@@ -34,7 +34,7 @@
             color: white;
             font-weight: 500;
             font-size: 18px;
-            background-color: #39B6B5;
+            background-color: #093d59;
             cursor: pointer;
         }
 
